# outreach_pipeline

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: index.py
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ActivityFeed.tsx  AppShell.tsx  CommandBar.tsx  MetricsStrip.tsx  PipelineFlow.tsx  ResultsTabs.tsx  SafetyConfirmModal.tsx  Sidebar.tsx  ui.tsx
dashboard/src/components/empty-states/: SystemReady.tsx
dashboard/src/components/layout/: CommandBar.tsx  Sidebar.tsx
dashboard/src/lib/: types.ts  usePipeline.ts
outreach/: __init__.py  api.py  cli.py  config.py  dedup.py  logger.py  models.py  pipeline.py  storage.py  utils.py
outreach/email/: __init__.py  templates.py
outreach/stages/: __init__.py  brevo.py  eazyreach.py  ocean.py  prospeo.py
runs/: .gitkeep
tests/: test_cli.py  test_clients.py  test_hardening.py  test_models_and_storage.py
