[project]
name = "outreach-pipeline"
version = "0.1.0"
description = "Automated cold outreach pipeline: seed domain -> outreach emails."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[tool.vercel]
entrypoint = "outreach.api:app"
